# ClasificadorResenas

./: .gitignore  .gitlab-ci.yml  Docker-compose.yml  Dockerfile  Dockerfile.backend  MLFLOW.PY  Makefile  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  reseñas.csv  server + mlflow.py
.github/workflows/: cicd.yml
App/: main.py  requirements.txt
ML/: Dockerfile  client.py  codigos_test.py  mlflow_smoke.py  pyproject.toml  requirements.txt  sentiment_pb2.py  server.py  test.py
Tests/: conftest.py  test_grpc_integration.py  test_import.py  test_mlflow_startup.py  test_proto_import.py  test_server_unit.py
backend/: Dockerfile  pyproject.toml
backend/ML/: codigos_test.py  sentiment.proto  sentiment_pb2_grpc.py  server.py
frontend/: Dockerfile  pyproject.toml
frontend/App/: main.py
