[project]
name = "sistema-rese침as-ia"
version = "0.1.0"
description = "Sistema de rese침as con an치lisis de sentimientos usando BETO, gRPC y MLflow. Incluye interfaz Streamlit para interacci칩n."
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "transformers>=4.40.0",
    "mlflow>=2.12.0",
    "grpcio>=1.58.0",
    "grpcio-tools>=1.58.0",
    "protobuf>=4.24.0",
    "streamlit>=1.25.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.4.0",
    "datasets>=2.20.0"
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
