[project]
name = "ml-backend"
version = "0.1.0"
description = "Servidor gRPC con BETO"
requires-python = ">=3.9"

dependencies = [
    "grpcio>=1.65.0",
    "grpcio-tools>=1.65.0",
    "transformers>=4.44.0",
    "pytest==8.4.2"
    # 👇 Torch CPU lo instalamos directo en el Dockerfile
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
index-url = "https://pypi.org/simple"
